Fixed mobile table overflow

--- a/resources/assets/sass/vue-modal.scss
+++ b/resources/assets/sass/vue-modal.scss
@@ -20,6 +20,11 @@
     width:33%;
   }
 }
+@media (max-width: 767px) {
+  .modal-container {
+    max-width:360px;
+  }
+}
 
 .modal-container {
   margin: 0px auto;
